  * template: Add support for a BASENAME variable.
  * Fixes creation of pages when clicking on WikiLinks starting with "/".
  * Change deb dependencies to list Text::Markdown before markdown, since
    the former, while slower, has a much better html parser that avoids
    numerous bugs.
  * meta: Support a guid option, to allow forcing a particular url or
    uuid in feeds. (smcv)

 -- Josh Triplett <josh@freedesktop.org>  Wed, 09 Jul 2008 21:30:33 -0700

ikiwiki (2.53) unstable; urgency=low

  * search: generate configuration files once only when rebuilding
    (Gabriel McManus)
  * attachment: Fix an uninitialised value warning when editing a page
    that currently has no attachments.
  * Fix a bug with links to pages whose names contained colons.
  * attachment: Support old versions of CGI.pm that lack an upload method.
  * Include ikiwiki.setup in examples in the debian package.
  * attachment: Support perl 5.8's buggy version of CGI.pm.
  * otl: Support utf-8 files. (Recai Oktaş)

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2008 16:45:33 -0400

ikiwiki (2.52) unstable; urgency=low

  * attachment: New plugin for uploading and managing attachments.
    This includes a fairly powerful PageSpec based admin pref for deciding
    whether to accept a given upload, and an attachment management interface
    on the edit page.
    (Sponsored by The TOVA Company.)
  * If attachments are not enabled, configure CGI.pm to disable file
    uploads by default. (An anti-DOS measure.)
  * toggle: Add support for toggles that are open by default.
  * toggle: Fix to work in preview mode.
  * toggle: Add javascript to top of page, not to end. This avoids flicker
    since closed toggles will not be displayed as the page is loading.
  * The editpage form now uses the raw page name, not the page title, in its
    'page' cgi parameter. Using the title was ambiguous and made it
    impossible to tell between some pages, like "foo/bar" and "foo__47__bar",