@@ -17,6 +17,7 @@ ikiwiki (2.54) UNRELEASED; urgency=low
     numerous bugs.
   * meta: Support a guid option, to allow forcing a particular url or
     uuid in feeds. (smcv)
+  * Move yesno function out of inline and into IkiWiki core, not exported.
 
  -- Josh Triplett <josh@freedesktop.org>  Wed, 09 Jul 2008 21:30:33 -0700
 
